문서에 이미지 추가

--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <h1>git&gitHub 연습용 페이지</h1>
+    <div style="text-align: center;">
+        <img src="img.jpeg" alt="김선호">
+    </div>
 </body>
 </html>
